# context-vault

./: .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
evals/: BRANCHING_RUBRIC.md  diff.test.ts  diff.ts  diff_runs.ts  run.ts
evals/golden/: cors-middleware-001.transcript.md  cors-middleware-001.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/: Badge.tsx  Spinner.tsx
src/components/vault/: BranchTree.tsx  ConfirmModal.tsx  ConversationList.tsx  ExportPanel.tsx  IngestModal.tsx  NodeDetail.tsx  NodeTree.tsx  SearchBar.tsx  SearchResults.tsx  SettingsModal.tsx
src/dev/: StorageSandbox.tsx
src/lib/: schemas.ts  types.ts
src/lib/db/: index.ts  migrations.ts
src/lib/dev/: seedData.ts
src/lib/llm/: client.ts  compression.ts
src/lib/mirror/: index.ts
src/lib/pipeline/: compress.ts  ingest.test.ts  ingest.ts  rubric.ts  types.ts
src/lib/state/: uiStore.ts
src/lib/storage/: MarkdownMirror.ts  NodesRepository.ts  SettingsRepository.ts  types.ts
src/pages/: SettingsPage.tsx  VaultPage.tsx
src/store/: vaultStore.ts
